# PluginSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: PluginSystemConfig.cmake.in
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PLUGIN_ABI.md  ROADMAP.md  SHARED_MEMORY.md
examples/: IPlugin.h  MyUserPlugin.cpp  MyUserPlugin.h  PipelinePresenterPlugin.cpp  PipelinePresenterPlugin.h  PipelineProcessorPlugin.cpp  PipelineProcessorPlugin.h  PipelineProducerPlugin.cpp  PipelineProducerPlugin.h  PipelineSamples.h  Samples.h  graph_pipeline_app.cpp  greeter_plugin.cpp  host_app.cpp  pipeline_presenter_plugin.cpp  pipeline_processor_plugin.cpp  pipeline_producer_plugin.cpp  sdk.hpp
examples/host_sdk/: dll_plugin_provider.cpp  dll_plugin_provider.hpp  recorder_plugin.cpp  recorder_plugins.cpp  recorder_plugins.hpp  recording_format.cpp  recording_format.hpp  replay_plugin.cpp
examples/node_editor/: editor_model.cpp  editor_model.hpp  node_editor_app.cpp  node_editor_widget.cpp  node_editor_widget.hpp  pipeline_graph.json  recorder_graph.json  replay_graph.json
examples/sdk/: dll_adapter.hpp
include/pluginsystem/: error.hpp  graph.hpp  instance.hpp  invocation_context.hpp  plugin_api.h  plugin_manager.hpp  providers.hpp  registry.hpp  sdk.hpp  shared_memory.hpp  types.hpp
include/pluginsystem/sdk/: dll_adapter.hpp  plugin.hpp  ports.hpp  properties.hpp  registration.hpp  type_name.hpp
src/: error.cpp  graph_runtime.cpp  invocation_context.cpp  plugin_instance.cpp  plugin_providers.cpp  plugin_registry.cpp  shared_memory.cpp  shared_property_block.cpp  types.cpp
src/detail/: platform_error.cpp  platform_error.hpp  plugin_utils.cpp  plugin_utils.hpp  shared_library.cpp  shared_library.hpp
tests/: missing_symbol_plugin.cpp  node_editor_widget_smoke.cpp  plugin_manager_tests.cpp  sdk_no_base_plugin.cpp  test_echo_plugin.cpp
